Fixed alignment of example in add a new subject : Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -110,7 +110,7 @@ span.error_arrow,#questionnaire-code-error, label.error_arrow{
 
 .example{
     clear: both;
-    margin-top: -20px;
+    margin-top: -10px;
 }
 
 #type_message{
